<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddActivity"
    >




    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tool_bar_color"
        android:id="@+id/addToolBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back"
            android:id="@+id/addProductBack"
            android:layout_gravity="center_vertical"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Add a Product"
            android:textColor="@color/black"
            android:textSize="28sp" />

    </LinearLayout>

    </Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/addToolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"

            android:layout_marginRight="20dp"
            android:layout_above="@+id/menuLinearBottom"


            android:orientation="vertical">

            <ImageView
                android:id="@+id/addProductImg"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/addprod" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Name of the Product"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/addProductName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_outline"
                android:padding="10dp"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/unit_price_of_the_product_in"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_text_outline"
                    android:padding="10dp"
                    android:text="" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description_of_the_product"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/addProductDesc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_outline"
                android:padding="10dp"
                android:text="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category_of_the_product_eg_smartphone_shoes_etc"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/addProductCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_outline"
                android:padding="10dp"
                android:text="" />

            <TextView
                android:id="@+id/confirmAddProd"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/yellow_bg"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/confirm"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@id/menuLinearBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:animateLayoutChanges="true"
            android:contentDescription="@string/app_name"
            app:itemBackground="@color/white"
            app:itemIconTint="@color/black"
            app:labelVisibilityMode="selected"
            app:menu="@menu/menu_nav"

            />
    </LinearLayout>


</RelativeLayout>