<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.HomeActivity"
    >


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/home_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:background="#E453AEF6">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    android:background="@drawable/tool_bar_color">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_40sdp"
                            android:textColor="@color/black"
                            android:text="@string/amazon"
                            android:textSize="@dimen/_27sdp"
                            android:fontFamily="sans-serif-condensed-medium"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"/>

                        <ImageView
                            android:id="@+id/home_cart"
                            android:layout_width="@dimen/_47sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginStart="@dimen/_140sdp"
                            android:clickable="true"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/cart"
                            android:focusable="true" />

                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>
            </LinearLayout>


            <!-- since sliderView dependency is not working -->

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerMain"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:contentDescription="@string/app_name"

                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_17sdp"
                android:text="Deals of the Day"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"/>


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:background="@color/white"
                android:backgroundTint="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_12sdp"
                    android:background="@color/white"
                    android:backgroundTint="@color/white">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:background="@color/white">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/_10sdp">

                            <ImageView
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:src="@drawable/shoes1"
                                />
                            <TextView
                                android:id="@+id/oddShoeName"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_42sdp"
                                android:text="@string/nike_air_max_n_outdoor_shoe"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_13ssp"/>

                            <TextView
                                android:id="@+id/oddShoePrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_7037"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_23ssp"/>


                        </LinearLayout>




                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:background="@color/white">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/_10sdp">

                            <ImageView
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:src="@drawable/shoes2"
                                />
                            <TextView
                                android:id="@+id/evenShoeName"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_42sdp"
                                android:text="@string/nike_air_max_n_running_shoe"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_13ssp"/>

                            <TextView
                                android:id="@+id/evenShoePrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_5108"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_23ssp"/>
                        </LinearLayout>




                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:background="@color/white">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/_10sdp">

                            <ImageView
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:src="@drawable/shoes1"
                                />
                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_42sdp"
                                android:text="Nike Air Max\n Outdoor Shoe"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_13ssp"/>

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹7037"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_23ssp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:background="@color/white">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/_10sdp">

                            <ImageView
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:src="@drawable/shoes2"
                                />
                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_42sdp"
                                android:text="Nike Air Max\n Running Shoe"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_13ssp"/>

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹5108"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_23ssp"/>
                        </LinearLayout>




                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/shoes5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:background="@color/white">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/_10sdp">

                            <ImageView
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="@dimen/_100sdp"
                                android:src="@drawable/shoes1"
                                />
                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_42sdp"
                                android:text="Nike Air Max\n Outdoor Shoe"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_13ssp"/>

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="₹7037"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_23ssp"/>
                        </LinearLayout>




                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_17sdp"
                android:text="Top Product"
                android:textSize="@dimen/_23ssp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                />
            <ListView
                android:id="@+id/productList"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_370sdp"
                android:padding="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:nestedScrollingEnabled="true"/>

            <TextView
                android:id="@+id/viewAllProducts"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_10sdp"
                android:fontFamily="sans-serif-medium"
                android:gravity="right"
                android:text="VIEW ALL"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />










        </LinearLayout>






    </androidx.core.widget.NestedScrollView>







    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:contentDescription="@string/app_name"
        app:itemBackground="@color/white"
        app:itemIconTint="@color/black"
        app:labelVisibilityMode="selected"
        app:menu="@menu/menu_nav"
        android:layout_gravity="bottom"/>

</FrameLayout>




